[tool.poetry]
name = "spotify_script"
version = "0.1.0"
description = "Script to manage, augment, and filter spotify playlists"
authors = ["Nick Merlino <nick@merlino.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
numpy = "*"
matplotlib = "*"
spotipy = "*"
tqdm = "*"
retrying = "*"
requests = "*"
urllib3 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
